--- a/css/contato.css
+++ b/css/contato.css
@@ -11,7 +11,7 @@
   font-style: normal;
 }
 body{
-  background-color: rgb(34,34,34);
+  background-image: url(../img/pattern_waves-1_0.5_2_0-1.5_20_1__212121_715e32.png);
   max-width: 1200px;
   height: 100vh;
   margin: 0 auto;
@@ -23,47 +23,41 @@ body{
 header {
   display: flex;
   flex-direction: row;
-  max-height: 12rem;
-  max-width: 1170px;
+  align-items: center;
 }
-.image{
-  
-  text-align: center;
+header img{
   display: flex;
-  justify-content: center;
+  width: 400px;
+  margin: 0 17rem;
   transition-property: all;
-    transition-duration: 1s;
-    transition-timing-function: ease;
-    transition-delay: 0s;
+  transition-duration: 1s;
+  transition-timing-function: ease;
+  transition-delay: 0s;
 }
-.image:hover{
+header img:hover{
   transform: scale(1.1);
 }
-
-header a {
-  max-width: fit-content;
-  background-color: #f3f3f3; 
-  border: none;
-  border-radius: 10px;
-  color: #000;
-  padding: 13px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin-right: 14rem;
-  margin-top: 5rem;
-  height: 40px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
 header a{
-  text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 50px;
+    text-decoration: none;
+    opacity: 0.8;
+    color: #E5E5CB;
+    background-color: #1A120B;
+    border: 1px solid #a8a894;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: 0.5s;
 }
-header a:hover {
-  background-color: #ECB365;
-  color: black;
-}
+    header a:hover{
+      opacity: 1;
+      background-color: #E5E5CB;
+      color: #1A120B;
+    }
 main{
   display: flex;
   margin: 0 auto;
@@ -71,10 +65,9 @@ main{
 }
 /* modal */
 .contato{
-  background-image: linear-gradient(45deg, #735F32, rgb(66, 66, 66));
+  background-image: linear-gradient(45deg, #735F32, #524024);
   border-radius: 10px;
   padding:15px;
-  width: 65vw;
   height: 65vh;
   display: flex;
   flex-direction: row;
@@ -173,12 +166,12 @@ main{
   .mapa{
     display: flex;
     flex-direction: column;
-    max-width: 90%;
+    max-width: 100%;
     max-height: 90%;
     margin: 1rem 0;
   }
   .map{
-    width: 85%;
+    max-width: 100%;
     height: 45vh;
     border-radius: 10px;
     justify-content: center;
@@ -273,9 +266,10 @@ main{
     margin: .5rem 0;
   }
   .informacoes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0;
-    max-width: 100%;	
-    height: 100%;
   }
   .informacoes img{
     width: 35px;
@@ -293,9 +287,6 @@ main{
     font-size: 1rem;
   }
   .informacoes .email p{
-    display: flex;
-    justify-content: center;
-    align-items: start;
     font-size: 1rem;
   }
   .informacoes .email img{
@@ -309,7 +300,7 @@ main{
     display: flex;
     gap: 0;
     text-align: start;
-    margin-left: -1rem;
+    margin-left: -1.7rem;
   }
   .informacoes .email{
     gap: 5px;
@@ -357,17 +348,31 @@ main{
   }
   header{
     display: flex;
+    flex-direction: column;
   }
   header a{
     display: flex;
-    height: 2rem;
-    text-align: center;
-    padding: 8px;
-    margin: 1rem 3rem;
-  }
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    opacity: 0.8;
+    color: #E5E5CB;
+    padding : .3rem 4rem;
+    background-color: #1A120B;
+    border: 1px solid #a8a894;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    width: 2rem;
+    cursor: pointer;
+    transition: 0.5s;
+    }
+    header a:hover{
+      opacity: 1;
+      background-color: #E5E5CB;
+      color: #1A120B;
+    }
   header img{
-    width: 100%;
-    object-fit: fill; 
+    width: 60vw;
   }
   .logomobile{
     display: flex;
@@ -421,38 +426,5 @@ main{
     align-items: center;
     max-width: none;
     margin-top: 1rem;
-  }
-}
-/* desktop */
-@media screen and (min-width:1024px) and (max-width:1365px){
-  .aviso{
-    font-weight: 30;
-    margin-top: 2rem;
-    font-size: 1.3rem;
-    justify-content: center;
-  }
-  .mapa{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: none;
-    margin-top: 1rem;
-  }
-  .mapa p{
-    font-size: 1rem;
-    margin: 10px 1rem;
-  }
-  .map{
-    justify-content: center;
-    width: 100%;
-    height: 50vh;
-    margin: 0 auto;
-  }
-  .image{
-    margin-left: -7rem;
-  }
-  body{
-    padding: 2rem;
-    height: auto;
   }
 }
