--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,12 @@
     box-sizing: border-box;
   }
   body{
-    background-color: rgb(34,34,34);
+    /* background-color: rgb(34,34,34); */
+    background-image: url(../img/pattern_waves-1_0.5_2_0-1.5_20_1__212121_715e32.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
     max-width: 1200px;
     margin: 0 auto;
   }
@@ -130,15 +135,19 @@ i{
 /* mobile */
 /* header & body */
 @media (max-width: 767px) {
+  
+  body{
+    padding-top: 1rem;
+  }
+
   .header {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-left: -3rem;
     max-width: 1170px;
-    height: 8rem;
+    height: 5rem;
     justify-content: space-evenly;
-    background-color: rgb(34,34,34);
   }
   /*Servicos & Agendamento & Contato*/
     .header-navbar{
@@ -170,12 +179,10 @@ i{
       text-decoration-color: rgba(255,187,15,0.48);
       transition: 0.4s;
     }
-  .body{
-    background-color: #f3f3f3;
-  }
   hr{
     display: flex;
     width: 100%;
+    margin-top: 2rem;
   }
   .image img{
     display: none;
