--- a/css/contato.css
+++ b/css/contato.css
@@ -283,16 +283,13 @@ main{
     margin-top: 1rem;
     text-shadow: rgba(172, 126, 2, 0.44) 0px -3px 24px;
   }
-  .informacoes .whatsapp p{
-    font-size: 1rem;
-  }
+  .informacoes .whatsapp p,
   .informacoes .email p{
     font-size: 1rem;
   }
   .informacoes .email img{
     width: 30px;
     height: 30px;
-    margin-left: -4px;
   }
   .informacoes .insta,
   .informacoes .whatsapp,
@@ -307,16 +304,13 @@ main{
   }
   .aviso{
     font-weight: 300;
-    margin-top: 1rem;
     margin-left: -.8rem;
     font-size: 1rem;
     width: 110%;
   }
   .mapa{
-    display: flex;
-    flex-direction: column;
+    margin: 0;
     align-items: center;
-    max-width: none;
   }
   .map{
     justify-content: center;
