--- a/css/home.css
+++ b/css/home.css
@@ -27,7 +27,7 @@
   }
   
   /* Logo */
-  .logoimg{
+  .logomobile{
     width: 100%;
     object-fit: cover;
     transition-property: all;
@@ -35,14 +35,10 @@
     transition-timing-function: ease;
     transition-delay: 0s;
     }
-    .logoimg:hover{
+    .logomobile:hover{
       transform: scale(1.05);
       transition: .5s;
-    }
-  .logomobile{
-    display: none;
-  }
-  
+    }  
   body ul {
     list-style: none;
   }
@@ -106,7 +102,6 @@ h2{
   text-shadow: rgba(172, 126, 2, 0.44) 0px -3px 24px;
 }
 span{
-  /* color: rgba(255,187,15,0.48);  */
   color: #ECB365;
   font-size: 60px;
 }
@@ -135,29 +130,54 @@ i{
 /* mobile */
 /* header & body */
 @media (max-width: 767px) {
-  
   body{
-    padding-top: 1rem;
+    padding-top: 1.5rem;
   }
-
+  aside p{
+    font-size: 1.2rem;
+    font-weight: 300;
+    text-shadow: rgba(172, 126, 2, 0.44) 0px -3px 24px;
+  }
   .header {
-    display: flex;
+    padding-top: 2rem;
     flex-direction: column;
     align-items: center;
-    margin-left: -3rem;
+    position: relative;
+    right: 3.5rem;
     max-width: 1170px;
     height: 5rem;
     justify-content: space-evenly;
   }
+  .header img{
+    display: flex;
+    width: 90%;
+    transition-property: all;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+  }
+  .logomobile:hover{
+    transform: scale(1.05);
+    transition: .5s;
+  }
+  header .header-brand{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    left: 2rem;
+  } 
   /*Servicos & Agendamento & Contato*/
     .header-navbar{
       display: flex;
+      position: relative;
+      top: 2rem;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      max-width: 1170px;
-      height: 8rem;
-      justify-content: space-evenly;
+      width: 100%;
+      height: 100%;
     }
     .header-navbar ul{
       display: flex;
@@ -182,7 +202,9 @@ i{
   hr{
     display: flex;
     width: 100%;
-    margin-top: 2rem;
+    background-color: #f3f3f3;
+    position: absolute;
+    top: 8rem;
   }
   .image img{
     display: none;
@@ -206,33 +228,13 @@ i{
     max-width: 300px;
     font-weight: 300;
   }
-  .header img{
-    width: 50%;
-    object-fit: fill; 
-  }
-  .logomobile{
-    display: flex;
-    justify-content: center;
-    margin-left: 9rem;
-    transition-property: all;
-    transition-duration: 1s;
-    transition-timing-function: ease;
-    transition-delay: 0s;
-  }
-  .logomobile:hover{
-    transform: scale(1.05);
-    transition: .5s;
-  }
-  .logoimg{
-    display: none;
-  }
 }
 /* tablet */
 @media screen and (min-width:767px) and (max-width:1023px){
   .header {
     display: flex;
     align-items: center;
-    background-color: rgb(34,34,34);
+    background-image: url(../img/pattern_waves-1_0.5_2_0-1.5_20_1__212121_715e32.png);
   }
   /*Servicos & Agendamento & Contato*/
     .header-navbar ul{
