--- a/css/home.css
+++ b/css/home.css
@@ -150,7 +150,7 @@ i{
   }
   .header img{
     display: flex;
-    width: 90%;
+    width: 80%;
     transition-property: all;
     transition-duration: 1s;
     transition-timing-function: ease;
@@ -172,12 +172,12 @@ i{
   /*Servicos & Agendamento & Contato*/
     .header-navbar{
       display: flex;
-      position: relative;
-      top: 2rem;
-      flex-direction: column;
       align-items: center;
+      position: relative;
+      justify-content: center;
       width: 100%;
       height: 100%;
+      top: 2.4rem;
     }
     .header-navbar ul{
       display: flex;
@@ -204,7 +204,7 @@ i{
     width: 100%;
     background-color: #f3f3f3;
     position: absolute;
-    top: 8rem;
+    top: 8.5rem;
   }
   .image img{
     display: none;
@@ -213,6 +213,7 @@ i{
   main{
     display: flex;
     flex-direction: column;
+    margin-top: 4.5rem;
   }
   span{
     font-size: 3rem;
@@ -234,7 +235,6 @@ i{
   .header {
     display: flex;
     align-items: center;
-    background-image: url(../img/pattern_waves-1_0.5_2_0-1.5_20_1__212121_715e32.png);
   }
   /*Servicos & Agendamento & Contato*/
     .header-navbar ul{
@@ -255,9 +255,6 @@ i{
       text-decoration-color: rgba(255,187,15,0.48);
       transition: 0.4s;
     }
-  .body{
-    background-color: #f3f3f3;
-  }
   hr{
     display: flex;
     width: 100%;
@@ -271,7 +268,6 @@ i{
   .header {
     display: flex;
     align-items: center;
-    background-color: rgb(34,34,34);
   }
   /*Servicos & Agendamento & Contato*/
     .header-navbar ul{
@@ -292,14 +288,14 @@ i{
       text-decoration-color: rgba(255,187,15,0.48);
       transition: 0.4s;
     }
-  .body{
-    background-color: #f3f3f3;
-  }
+ 
   hr{
     display: flex;
     width: 100%;
   }
+ 
   .image img{
-    display: none;
+    position: relative;
+    right: 1rem;
   }
 }
