--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
   }
   body{
-    /* background-color: rgb(34,34,34); */
+    background-color: rgb(34,34,34);
     background-image: url(../img/pattern_waves-1_0.5_2_0-1.5_20_1__212121_715e32.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -14,7 +14,7 @@
     max-width: 1200px;
     margin: 0 auto;
   }
-  .header {
+  header {
     display: flex;
     align-items: center;
     max-width: 1170px;
@@ -135,20 +135,22 @@ i{
   }
   aside p{
     font-size: 1.2rem;
-    font-weight: 300;
+    background-color: rgb(34,34,34);
+    opacity: 0.9;
     text-shadow: rgba(172, 126, 2, 0.44) 0px -3px 24px;
   }
-  .header {
+  
+  header {
     padding-top: 2rem;
     flex-direction: column;
     align-items: center;
     position: relative;
     right: 3.5rem;
-    max-width: 1170px;
     height: 5rem;
     justify-content: space-evenly;
+    
   }
-  .header img{
+  header img{
     display: flex;
     width: 80%;
     transition-property: all;
@@ -232,7 +234,7 @@ i{
 }
 /* tablet */
 @media screen and (min-width:767px) and (max-width:1023px){
-  .header {
+  header {
     display: flex;
     align-items: center;
   }
@@ -265,7 +267,7 @@ i{
 }
 /* desktop */
 @media screen and (min-width:1024px) and (max-width:1199px){
-  .header {
+  header {
     display: flex;
     align-items: center;
   }
